javier-carnero/exercise/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise
  labels:
    app: mariadb
    type: exercise
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
        type: exercise
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
