javier-carnero/exercise/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise
  labels:
    app: wordpress
    type: exercise
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
        type: exercise
    spec:
      containers:
      - image: bitnami/wordpress:latest
        name: wordpress
