javier-carnero/exercise/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise
spec:
  type: ClusterIP
  ports:
    - name: data
      port: 3306
      targetPort: 3306
  selector:
    app: mariadb
