javier-carnero/exercise/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: exercise
spec:
  type: ClusterIP
  ports:
    - name: frontend
      port: 80
      targetPort: 80
    - name: frontend-ssl
      port: 443
      targetPort: 443
  selector:
    app: wordpress
