javier-carnero/exercise/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: exercise
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    service-upstream: "true"
spec:
  tls:
    - hosts:
        - wordpress.exercise.com
      secretName: sslcerts
  rules:
    - host: wordpress.exercise.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 80
